fix promotion food